--- a/docs/src/layouts/RootLayout.astro
+++ b/docs/src/layouts/RootLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from '@/components/Footer.astro'
 import Header from '@/components/Header.astro'
+import StyleWrapper from '@/components/StyleWrapper.astro'
 
 import { siteConfig } from '@/config/site'
 
@@ -97,5 +98,6 @@ const { title, description, url } = Astro.props
       </div>
       <Footer />
     </div>
+    <StyleWrapper />
   </body>
 </html>
