--- a/docs/src/components/tabs/TabsList.astro
+++ b/docs/src/components/tabs/TabsList.astro
@@ -1,11 +1,15 @@
 ---
 import { cn } from '@/lib/utils'
+
+export interface Props {
+  class?: string
+}
 ---
 
 <div
+  x-ref="tabButtons"
   class={cn(
     'inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground',
-    'w-full justify-start rounded-none border-b bg-transparent p-0',
     Astro.props.class,
   )}
 >
