--- a/docs/src/components/tabs/TabsTrigger.astro
+++ b/docs/src/components/tabs/TabsTrigger.astro
@@ -2,19 +2,18 @@
 import { cn } from '@/lib/utils'
 
 export interface Props {
-  value: string
   class?: string
 }
-const { value } = Astro.props
 ---
 
-<ub-tabs-trigger
-  {value}
+<button
+  :id="$id(tabId)"
+  @click="tabButtonClicked($el);"
+  :data-state="tabButtonActive($el) ? 'active' : 'inactive'"
   class={cn(
     'inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow',
-    'relative h-9 rounded-none border-b-2 border-b-transparent bg-transparent px-4 pb-3 pt-2 font-semibold text-muted-foreground shadow-none transition-none data-[state=active]:border-b-primary data-[state=active]:text-foreground data-[state=active]:shadow-none cursor-pointer',
     Astro.props.class,
   )}
 >
   <slot />
-</ub-tabs-trigger>
+</button>
