--- a/docs/src/components/Header.astro
+++ b/docs/src/components/Header.astro
@@ -4,6 +4,7 @@ import { buttonVariants } from '@/registry/new-york/ui/button'
 
 import Navbar from './Navbar.astro'
 import MobileNavbar from './MobileNavbar.astro'
+import CommandMenu from './CommandMenu.astro'
 
 const { pathname } = Astro.url
 ---
@@ -16,7 +17,7 @@ const { pathname } = Astro.url
     <MobileNavbar pathname={pathname} />
     <div class="flex flex-1 items-center justify-end space-x-2">
       <div class="w-full flex-1 md:w-auto md:flex-none">
-        <!-- <CommandMenu /> -->
+        <CommandMenu />
       </div>
       <div class="flex items-center">
         <a
