--- a/docs/src/components/MainNav.astro
+++ b/docs/src/components/MainNav.astro
@@ -12,11 +12,11 @@ const { pathname } = Astro.props
 ---
 
 <div class="mr-4 hidden md:flex">
-  <a href="/" class="mr-6 flex items-center space-x-2">
+  <a href="/" class="mr-4 flex items-center space-x-2 lg:mr-6">
     <Logo class="h-6 w-6" />
     <span class="hidden font-bold sm:inline-block">{siteConfig.title}</span>
   </a>
-  <nav class="flex items-center space-x-6 text-sm font-medium">
+  <nav class="flex items-center gap-4 text-sm xl:gap-6">
     {
       docsConfig.mainNav.map((item) => (
         <a
@@ -27,7 +27,7 @@ const { pathname } = Astro.props
               (item.href === '/docs/components/accordion' && pathname.startsWith('/docs/components')) ||
               (item.href === '/examples/cards' && pathname.startsWith('/examples'))
               ? 'text-foreground'
-              : 'opacity-60',
+              : 'text-foreground/60',
           )}
         >
           {item.title}
