--- a/docs/src/components/Pager.astro
+++ b/docs/src/components/Pager.astro
@@ -36,17 +36,20 @@ const pager = getPagerForDoc(pathname)
 <div class="flex flex-row items-center justify-between">
   {
     pager.prev?.href ? (
-      <a class={buttonVariants({ variant: 'outline' })} href={pager.prev?.href}>
-        <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-4 w-4" viewBox="0 0 24 24">
-          <path
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="m15 6l-6 6l6 6"
-          />
-          <title>Previous page</title>
+      <a class={buttonVariants({ variant: 'ghost' })} href={pager.prev?.href}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-chevron-left w-4 h-4"
+        >
+          <path d="m15 18-6-6 6-6" />
         </svg>
         {pager.prev.title}
       </a>
@@ -54,18 +57,21 @@ const pager = getPagerForDoc(pathname)
   }
   {
     pager.next?.href ? (
-      <a class={cn(buttonVariants({ variant: 'outline' }), 'ml-auto')} href={pager.next?.href}>
+      <a class={cn(buttonVariants({ variant: 'ghost' }), 'ml-auto')} href={pager.next?.href}>
         {pager.next.title}
-        <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 h-4 w-4" viewBox="0 0 24 24">
-          <path
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="m9 6l6 6l-6 6"
-          />
-          <title>Next page</title>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-chevron-right w-4 h-4"
+        >
+          <path d="m9 18 6-6-6-6" />
         </svg>
       </a>
     ) : null
