--- a/docs/src/components/page-header/PageHeader.astro
+++ b/docs/src/components/page-header/PageHeader.astro
@@ -3,7 +3,12 @@ import { cn } from '@/lib/utils'
 ---
 
 <section
-  class={cn('mx-auto flex flex-col items-start gap-2 px-4 py-8 md:py-12 md:pb-8 lg:py-12 lg:pb-10', Astro.props.class)}
+  class={cn(
+    'flex flex-col items-start gap-2 border-b border-border/40 py-8 dark:border-border md:py-10 lg:py-12',
+    Astro.props.class,
+  )}
 >
-  <slot />
+  <div class="container">
+    <slot />
+  </div>
 </section>
