--- a/docs/src/components/page-header/PageHeaderDescription.astro
+++ b/docs/src/components/page-header/PageHeaderDescription.astro
@@ -2,6 +2,6 @@
 import { cn } from '@/lib/utils'
 ---
 
-<p class={cn('text-balance max-w-2xl text-lg font-light text-foreground', Astro.props.class)}>
+<p class={cn('max-w-2xl text-balance text-lg font-light text-foreground', Astro.props.class)}>
   <slot />
 </p>
