--- a/docs/src/components/Announcement.astro
+++ b/docs/src/components/Announcement.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<a href="/docs/components/textarea" class="group mb-2 inline-flex items-center px-0.5 text-sm font-medium">
-  <span class="underline-offset-4 group-hover:underline"> New textarea component </span>
+<a href="/docs/components/pagination" class="group mb-2 inline-flex items-center px-0.5 text-sm font-medium">
+  <span class="underline-offset-4 group-hover:underline"> New pagination component </span>
   <svg
     xmlns="http://www.w3.org/2000/svg"
     width="24"
