--- a/docs/src/components/CopyButton.astro
+++ b/docs/src/components/CopyButton.astro
@@ -1,11 +1,11 @@
 ---
 import { cn } from '@/lib/utils'
-import { buttonVariants, type ButtonVariant } from '@/registry/new-york/ui/button'
+import { buttonVariants, type UbButtonVariant } from '@/registry/new-york/ui/button'
 
 export interface Props {
   class: string
   value: string
-  variant?: ButtonVariant
+  variant?: UbButtonVariant
 }
 
 const { value, class: className, variant = 'ghost' } = Astro.props
