chore: update font dependencies to use variable fonts

--- a/apps/www/src/layouts/RootLayout.astro
+++ b/apps/www/src/layouts/RootLayout.astro
@@ -5,24 +5,8 @@ import StyleWrapper from '@/components/StyleWrapper.astro'
 
 import { siteConfig } from '@/config/site'
 
-import '@fontsource/geist-mono/100.css'
-import '@fontsource/geist-mono/200.css'
-import '@fontsource/geist-mono/300.css'
-import '@fontsource/geist-mono/400.css'
-import '@fontsource/geist-mono/500.css'
-import '@fontsource/geist-mono/600.css'
-import '@fontsource/geist-mono/700.css'
-import '@fontsource/geist-mono/800.css'
-import '@fontsource/geist-mono/900.css'
-import '@fontsource/geist-sans/100.css'
-import '@fontsource/geist-sans/200.css'
-import '@fontsource/geist-sans/300.css'
-import '@fontsource/geist-sans/400.css'
-import '@fontsource/geist-sans/500.css'
-import '@fontsource/geist-sans/600.css'
-import '@fontsource/geist-sans/700.css'
-import '@fontsource/geist-sans/800.css'
-import '@fontsource/geist-sans/900.css'
+import '@fontsource-variable/geist-mono'
+import '@fontsource-variable/geist'
 
 import './main.css'
 import './mdx.css'
